--- a/client/rumahbagus/package.json
+++ b/client/rumahbagus/package.json
@@ -10,9 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.1",
+    "element-ui": "^1.2.8",
     "iview": "^2.0.0-rc.10",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
+    "vue2-google-maps": "^0.7.5",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
